# English-compiler

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  MIGRATION.md  NODE_MAP.md  QUICK_REFERENCE.md  README.md  STATUS.md  TODO.md  VERSIONING.md  coreil_v1.md  opencode.json  pyproject.toml
.claude/: settings.local.json
.codex/: TEST_COMMANDS.md
.githooks/: pre-commit
.github/workflows/: deploy-playground.yml  publish.yml
.opencode/commands/: add-test.md  debug-failure.md  implement-feature.md  refactor-clean.md  release-pypi.md  review-merge.md  ship.md
docs/: coreil_v0_1.md  coreil_v0_2.md  coreil_v0_3.md  coreil_v0_4.md  coreil_v0_5.md
english_compiler/: __init__.py  __main__.py  explain.py  settings.py  watch.py
english_compiler/cli/: __init__.py  config_flow.py  emit_helpers.py  io_utils.py  lint_flow.py  run_targets.py
english_compiler/coreil/: __init__.py  constants.py  debug.py  emit.py  emit_assemblyscript.py  emit_base.py  emit_cpp.py  emit_go.py  emit_javascript.py  emit_rust.py  emit_utils.py  interp.py  lint.py  lower.py  module.py  node_nav.py  optimize.py  source_map.py  validate.py  versions.py  wasm_build.py
english_compiler/frontend/: __init__.py  base.py  claude.py  coreil_schema.py  error_explainer.py  gemini.py  mock_llm.py  openai_provider.py  prompt.txt  prompt_error.txt  qwen.py
englishc/: __init__.py  __main__.py
englishc/coreil/: __init__.py  validate.py
examples/: array_index.coreil.json  array_length.coreil.json  array_negative_index.coreil.json  array_setindex.coreil.json  bigram_count.coreil.coreil.json  bigram_count.coreil.json  bigram_count.coreil.lock.json  bigram_count.py  bubble_sort.coreil.json  bubble_sort.lock.json  bubble_sort.txt  dedup_demo.coreil.json  external_call_demo.coreil.json  external_call_demo.py  fn_add.coreil.json  for_inclusive.coreil.json  for_sum.coreil.json  for_sum.coreil.lock.json  for_sum_generated.py  foreach_print.coreil.json  hello.coreil.json  hello.lock.json  hello.txt  hello_v1.coreil.coreil.json  hello_v1.coreil.json  hello_v1.coreil.lock.json  hello_v1.lock.json  hello_v1.txt  helper_functions.coreil.json  if.coreil.json  json_basic.coreil.json  map_advanced.coreil.json  map_counter.coreil.json  map_demo.coreil.json  map_missing_key.coreil.json  map_nested.coreil.json  math.coreil.json  queue_demo.coreil.coreil.json  queue_demo.coreil.json  queue_demo.coreil.lock.json  (+15 more)
playground/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
playground/scripts/: bundle-examples.js  (+1 more)
scripts/: demo_claude_compile.py
tests/: ALGORITHM_TESTS.md  TESTING_STRATEGY.md  run.py  run_algorithms.py  run_parity.py  test_break_continue.py  test_cli_helpers.py  test_debug.py  test_deque.py  test_explain.py  test_explain_errors.py  test_fuzz.py  test_go.py  test_helpers.py  test_import.py  test_javascript.py  test_lint.py  test_lower.py  test_map.py  test_optimize.py  test_record.py  test_regression_suite.py  test_retry.py  test_rust.py  test_set_ops.py  test_settings.py  test_short_circuit.py  test_slice.py  test_source_map.py  test_string_ops.py  test_switch.py  test_try_catch.py  test_type_convert.py  test_wasm_host_print.py
(+66 files in other folders)
